# minicode-llm

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
codellm_data/: README.md  __init__.py  main.py  pyproject.toml
codellm_data/config/: __init__.py  config.py  config.yaml
codellm_data/content/: __init__.py  downloader.py  models.py
codellm_data/dataset/: __init__.py  parser.py  s3_downloader.py  schema.py
codellm_data/utils/: logging.py  timer.py
codellm_tokenizer/: README.md  main.py  pyproject.toml
