[project]
name = "codellm-tokenizer"
version = "0.1.0"
description = "Train a tokenizer on swallcode pretrained dataset."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "tokenizers>=0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.5.0",
]

# ruff configuration
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "D",      # pydocstyle
    "N",      # pep8-naming
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "RET",    # flake8-return
    "ARG",    # flake8-unused-arguments
    "PTH",    # flake8-use-pathlib
    "PL",     # pylint
    "PERF",   # perflint
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "ARG",     # unused arguments ok in tests
    "PLR2004", # magic values ok in tests
    "D",       # Don't enforce documentation rule
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

# typos configuration
[tool.typos.files]
extend-exclude = [".gitignore", "LICENSE"]

[tool.typos.default]
locale = "en-gb"

# pyrefly configuration
[tool.pyrefly]
python-version = "3.12"
project-excludes = ["**/.[!/.]*", "**/tests", "**/__pycache__"]
project-includes = ["."]
search-path = ["."]
python-interpreter-path = ".venv/bin/python3"
site-package-path = [".venv/lib/python3.12/site-packages"]
